
SET( OODL_YOUBOT_VERSION 0.01 )

FIND_PACKAGE(Soem REQUIRED)
IF (SOEM_FOUND)
  INCLUDE_DIRECTORIES(${SOEM_INCLUDE_DIR})
  LINK_DIRECTORIES(${SOEM_LIBRARY_DIR})
  LINK_LIBRARIES(${SOEMLIB})
	MESSAGE(STATUS "SUCCESSFUL: Soem found")
ELSE (SOEM_FOUND)
	MESSAGE(STATUS "ERROR: Soem not found")
ENDIF (SOEM_FOUND)


FIND_PACKAGE(Rudeconfig REQUIRED)
IF (RUDECONFIG_FOUND)
  INCLUDE_DIRECTORIES(${RUDECONFIG_INCLUDE_DIR})
  LINK_DIRECTORIES(${RUDECONFIG_LIBRARY_DIR})
  LINK_LIBRARIES(${RUDECONFIGLIB})
	MESSAGE(STATUS "SUCCESSFUL: rudeconfig found")
ELSE (RUDECONFIG_FOUND)
	MESSAGE(STATUS "ERROR: rudeconfig not found")
ENDIF (RUDECONFIG_FOUND)



SET(OODL_YOUBOT_SRC
  ${CMAKE_HOME_DIRECTORY}/generic/Errors.cpp
  ${CMAKE_HOME_DIRECTORY}/generic/ExceptionOODL.cpp
  ${CMAKE_HOME_DIRECTORY}/generic/Logger.cpp
  ${CMAKE_HOME_DIRECTORY}/generic-joint/JointData.cpp
  ${CMAKE_HOME_DIRECTORY}/generic-joint/JointConfiguration.cpp
  ${CMAKE_HOME_DIRECTORY}/youbot/YouBot.cpp
  ${CMAKE_HOME_DIRECTORY}/youbot/YouBotJoint.cpp
  ${CMAKE_HOME_DIRECTORY}/youbot/YouBotGripper.cpp
  ${CMAKE_HOME_DIRECTORY}/youbot/EthercatMaster.cpp
  ${CMAKE_HOME_DIRECTORY}/youbot/YouBotJointConfiguration.cpp
  ${CMAKE_HOME_DIRECTORY}/base-kinematic/FourSwedishWheelOmniBaseKinematic.cpp
)

SET(OODL_YOUBOT_HEADERS
youbot/EthercatMaster.hpp
youbot/YouBot.hpp
youbot/YouBotGripper.hpp
youbot/YouBotJoint.hpp
youbot/YouBotJointConfiguration.hpp
youbot/YouBotSlaveMailboxMsg.hpp
youbot/YouBotSlaveMsg.hpp
)

ADD_LIBRARY(OODL_YOUBOT
  ${OODL_YOUBOT_SRC}
)
  
ADD_EXECUTABLE(OODL_YOUBOT_test
  ${CMAKE_HOME_DIRECTORY}/youbot/applications/Test.cpp
  ${OODL_YOUBOT_SRC}
)

MACRO(INSTALL_HEADERS_WITH_DIRECTORY HEADER_LIST)
  FOREACH(HEADER ${${HEADER_LIST}})
    STRING(REGEX MATCH "(.*)[/\\]" DIR ${HEADER})
    INSTALL(FILES ${HEADER} DESTINATION include/${DIR})
  ENDFOREACH(HEADER)
ENDMACRO(INSTALL_HEADERS_WITH_DIRECTORY)

INSTALL(FILES config/youbot-configfile.cfg DESTINATION etc)
INSTALL_HEADERS_WITH_DIRECTORY(OODL_YOUBOT_HEADERS)
INSTALL(TARGETS OODL_YOUBOT_test OODL_YOUBOT RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

